
181205	In add_client: use struct sockaddr_storage in argument to getsockname
	in order to fit ipv6 addresses.

181130	Additional options for client certificate verification.

170217	Corrected typo in pen.c per suggestion by Belinda Liu.
	This fixes issue #38.
	Released 0.34.1.

161029	Released 0.34.0.

161028	Merged pull request from Vincent Bernat for OpenSSL 1.1.0 compatibility.
	This fixes issue #28.

161024	Allow setting local address for upstream connections. This fixes issue #31.
	New penctl command "source" to set this option.

160914	Fixed issue #30: UDP not working in combination with a configuration file.

160908	Released 0.33.2.

160560	In epoll.c: check for EPOLLHUP.

160503	In dsr.c: always use our real mac address, to avoid confusing switches.
	Released 0.33.1.

160407	Cleaned up code residue surrounded by "#if 0".
	Released 0.33.0.

160407	Added CS_HALFDEAD for UDP streams that haven't seen traffic in a while.

160321	Bug in pending_and_closing: don't modify the list we're looping over.

160318	Updated pen manpage.
	Deprecated -Q option (it didn't do anything since kqueue was already the
	default where it was available).
	Fixed error handling in epoll support.

160217	Added transparent UDP test case to testsuite.sh.

160128	Contribution from Talik Eichinger: add X-Forwarded-Proto when doing
	SSL decryption.

151123	Released 0.32.0.

151120	Added tarpit test case to testsuite.sh.

151117	Tarpit functionality to be used with the DSR mode.

151112	pen.1: removed obsolete -S option, updated defaults for -x and -L.

151105	Released 0.31.1.

151103	In failover_server: sanity checks to failover routine.

151102	In add_client: add the initial server to .client as well as .initial.

151029	In failover_server: changed abuse_server to ABUSE_SERVER and emerg_server
	to EMERG_SERVER, to handle their default NO_SERVER values.
	See issue #19 on Github.

151012	At the suggestion from Marcos Vinicius Rogowski, the hash algorith